# muse-status

./: .gitignore  Cargo.toml  README.md  TODO.md  clippy.err  flake.nix  todo.norg
.github/workflows/: rust.yml
src/: client.rs  config.rs  errors.rs  lib.rs  utils.rs
src/battery/: mod.rs
src/brightness/: mod.rs
src/daemon/: mod.rs
src/date/: mod.rs
src/format/: bit.rs  color.rs  mod.rs
src/format/blocks/: mod.rs  output.rs
src/mpris/: mod.rs
src/network/: icons.rs  mod.rs
src/volume/: mod.rs
src/weather/: mod.rs  structs.rs
