[package]
name = "muse_status"
version = "0.1.0"
authors = ["Harrison Thorne <harrison.thorne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1"
nl80211 = { git = "https://github.com/Eonm/nl80211" }
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
mpris = { git = "https://github.com/Mange/mpris-rs" }
dbus = "0.8"
rodio = "0.11"
retain_mut = "0.1.1"               # Provide retain_mut method that has the same functionality as retain but gives mutable borrow…
xml-rs = "0.8.3"           # An XML library in pure Rust
