[package]
name = "muse_status"
version = "0.1.0"
authors = ["municorn <municorn@musicaloft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1"
nl80211 = { git = "https://github.com/Eonm/nl80211", rev = "c454268726156264e8a3cac08ffcb4ba01e1b4f1" }
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8" # for parsing/writing config files
serde_json = "1.0"
mpris = { git = "https://github.com/Mange/mpris-rs", rev = "95ae5bf5d33a780f57328044a700308fe7d1c5c2" }
dbus = "0.8"
xml-rs = "0.8.3" # for xml escaping
dirs = "3.0.1"
